--- a/lesson01/package.json
+++ b/lesson01/package.json
@@ -32,6 +32,7 @@
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
     "bootstrap": "^3.3.7",
+    "cesium": "^1.35.2",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
