--- a/lesson01/package.json
+++ b/lesson01/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "release":"ng build --prod --base-href /demo/lesson01/"
   },
   "private": true,
   "dependencies": {
@@ -30,9 +31,9 @@
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "^2.5.53",
-    "@types/node": "^8.0.17",
+    "@types/node": "^8.0.19",
     "bootstrap": "^3.3.7",
-    "cesium": "^1.35.2",
+    "cesium": "^1.36.0",
     "codelyzer": "^3.1.2",
     "jasmine-core": "^2.7.0",
     "jasmine-spec-reporter": "~4.1.0",
