--- a/lesson02/package.json
+++ b/lesson02/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build --prod --base-href /demo/ng-lesson02/"
+    "release": "ng build --prod --base-href /demo/ng-lesson02/"
   },
   "private": true,
   "dependencies": {
