--- a/lesson03/package.json
+++ b/lesson03/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "release": "ng build --prod --base-href /demo/ng-lesson03/"
   },
   "private": true,
   "dependencies": {
