--- a/lesson05/package.json
+++ b/lesson05/package.json
@@ -8,7 +8,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "release": "ng build --prod --base-href /demo/ng-lesson05/"
+
   },
   "private": true,
   "dependencies": {
