--- a/ng-zorro-cesium/package.json
+++ b/ng-zorro-cesium/package.json
@@ -11,7 +11,7 @@
     "e2e": "ng e2e",
     "debug": "ng serve --port 10010 --open",
     "db-aot": "ng serve --port 10010 --open --aot",
-    "release": "ng build --prod --base-href  /demo/ng-leaflet/"
+    "release": "ng build --prod --base-href  /demo/ng-zorro-cesium/"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +38,7 @@
     "@types/node": "^8.0.22",
     "cesium": "^1.36.0",
     "codelyzer": "~3.0.1",
+    "font-awesome":"^4.7.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -48,6 +49,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "leaflet": "^1.2.0",
     "ng-zorro-antd": "^0.5.0-rc.0",
+    "primeng": "^4.1.3",
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
