--- a/ng-zorro-demo/package.json
+++ b/ng-zorro-demo/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^8.0.22",
     "cesium": "^1.36.0",
     "codelyzer": "~3.0.1",
+    "font-awesome": "^4.7.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
