--- a/ng-router-demo/package.json
+++ b/ng-router-demo/package.json
@@ -42,6 +42,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "rxjs": "^5.4.3",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
